# qField

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
.github/workflows/: gh-pages.yml  gradle.yml
java/: README.md  build.gradle  flake.nix  gradle.properties  settings.gradle
java/assets/: .gitkeep
java/core/: build.gradle
java/core/src/main/java/io/github/hey2022/qfield/: Charge.java  Checkpoint.java  Checkpoints.java  Draw.java  Level.java  Main.gwt.xml  Main.java  Path.java
java/headless/: build.gradle
java/headless/src/main/java/io/github/hey2022/qfield/headless/: HeadlessLauncher.java
java/html/: build.gradle
java/html/src/main/java/io/github/hey2022/qfield/: GdxDefinition.gwt.xml  GdxDefinitionSuperdev.gwt.xml
java/html/src/main/java/io/github/hey2022/qfield/gwt/: GwtLauncher.java
java/html/webapp/: index.html
java/lwjgl3/: build.gradle
java/lwjgl3/src/main/java/io/github/hey2022/qfield/lwjgl3/: Lwjgl3Launcher.java  StartupHelper.java
python/: flake.nix
python/qfield/: charge.py  colors.py  qfield.py
qfield/: charge.py  draw.py  qfield.py
